# euler_kokkos_two_phase

./: LICENSE
buil/: CMakeCache.txt  Makefile  cmake_install.cmake
buil/src/: Makefile  cmake_install.cmake  euler_kokkos  euler_kokkos_version.h
buil/src/all_regime/: Makefile  cmake_install.cmake
buil/src/muscl/: Makefile  cmake_install.cmake
buil/src/shared/: Makefile  cmake_install.cmake
buil/src/utils/: Makefile  cmake_install.cmake
buil/src/utils/config/: Makefile  cmake_install.cmake
buil/src/utils/io/: Makefile  cmake_install.cmake
buil/src/utils/monitoring/: Makefile  cmake_install.cmake
settings/: .test_static_bubble.ini.swn  .test_static_bubble.ini.swo  test_Case34.ini  test_non_isotherm.ini  test_rayleigh_taylor_instabilities.ini  test_rising_bubble.ini  test_static_bubble.ini
src/all_regime/: .CMakeLists.txt.swp  .HydroBaseFunctor2D.h.swl  .HydroBaseFunctor2D.h.swm  .HydroBaseFunctor2D.h.swn  .HydroBaseFunctor2D.h.swo  .HydroInitFunctors2D.h.swn  .HydroInitFunctors2D.h.swo  .HydroRunFunctors2D.h.swg  .HydroRunFunctors2D.h.swh  .HydroRunFunctors2D.h.swi  .HydroRunFunctors2D.h.swj  .HydroRunFunctors2D.h.swk  .HydroRunFunctors2D.h.swl  .HydroRunFunctors2D.h.swm  .HydroRunFunctors2D.h.swn  .HydroRunFunctors2D.h.swo  .SolverHydroAllRegime.h.swn  .SolverHydroAllRegime.h.swo  CMakeLists.txt  HydroBaseFunctor2D.h  HydroInitFunctors2D.h  HydroRunFunctors.h  HydroRunFunctors2D.h  HydroRunFunctors3D.h  LevelSet.h  LevelSet2D.h  LevelSet3D.h  PostProcessing2D.h  PostProcessing3D.h  SolverHydroAllRegime.h
src/shared/: GreshoParams.h  HydroParams.cpp  enums.h  real_type.h
src/utils/io/: IO_VTK.cpp
test/: CMakeLists.txt
test/io/: CMakeLists.txt  test_io_2d.ini  test_io_3d.ini  test_io_hdf5.cpp  test_io_pnetcdf.cpp  test_io_vtk.cpp
